# flat-mcmc

./: .gitignore  CHANGELOG  LICENSE  README.md  flat-mcmc.cabal  index.html  index.markdown  site.hs  stack-travis.yaml  stack.yaml
Examples/code/: BNN_Flat.hs  Booth_Flat.hs  Himmelblau_Flat.hs  Rosenbrock_Flat.hs  SPDE_Flat.hs  build_examples.sh
Examples/demos/: bnn.sh  himmelblau.sh  rosenbrock.sh
Numeric/MCMC/: Flat.hs
css/: style.css  tight.css
lib/Data/Vector/: Extended.hs
lib/Numeric/MCMC/: Flat.hs
src/: Main.hs
src/Numeric/MCMC/: Flat.hs
templates/: default.html
test/: BNN.hs  Rosenbrock.hs  Tests.hs
