name:                flat-mcmc
version:             1.0.0
synopsis:            Painless general-purpose sampling.
homepage:            http://jtobin.github.com/flat-mcmc
license:             MIT
license-file:        LICENSE
author:              Jared Tobin
maintainer:          jared@jtobin.ca
category:            Math
build-type:          Simple
cabal-version:       >=1.10
description:

    Painless general-purpose sampling.

Source-repository head
  Type:     git
  Location: http://github.com/jtobin/flat-mcmc.git

library
  default-language: Haskell2010
  ghc-options:      -Wall
  hs-source-dirs:   src
  exposed-modules:  Numeric.MCMC.Flat
  build-depends:
      base             <  5
    , lens             >= 4 && < 5
    , mcmc-types       >= 1.0.1
    , monad-par
    , mwc-probability  >= 1.0.1
    , pipes            >= 4 && < 5
    , primitive
    , transformers

