name:                flat-mcmc
version:             1.0.0
synopsis:            Painless general-purpose sampling.
homepage:            http://jtobin.github.com/flat-mcmc
license:             MIT
license-file:        LICENSE
author:              Jared Tobin
maintainer:          jared@jtobin.ca
category:            Math
build-type:          Simple
cabal-version:       >=1.10
description:

    Painless general-purpose sampling.

Source-repository head
  Type:     git
  Location: http://github.com/jtobin/flat-mcmc.git

library
  default-language: Haskell2010
  ghc-options:      -Wall
  hs-source-dirs:   lib
  exposed-modules:  Numeric.MCMC.Flat
  build-depends:
      base             <  5
    , mcmc-types       >= 1.0.1 && < 2
    , monad-par
    , monad-par-extras
    , mwc-probability  >= 1.0.1 && < 2
    , pipes            >= 4 && < 5
    , primitive
    , transformers
    , vector

Test-suite rosenbrock
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Rosenbrock.hs
  default-language:    Haskell2010
  ghc-options:
    -rtsopts -threaded
  build-depends:
      base              < 5
    , flat-mcmc
    , vector

